# convert_rgb_to_mono_image

./: CMakeLists.txt  README.md  package.xml
launch/: bgra_to_mono.launch  rgb_to_mono.launch
rviz/: preconfigured_rviz.rviz
src/: bgra_to_mono_node.cpp  rgb_to_mono_node.cpp
