<?xml version="1.0"?>
<package format="2">
  <name>convert_rgb_to_mono_image</name>
  <version>0.1.0</version>
  <description>The convert_rgb_to_mono_image package performs image conversions such as BGRA8 to MONO8 and RGB8 to MONO8.</description>

  <maintainer email="arghyame20buet@gmail.com">Arghya Chatterjee</maintainer>
  <license>MIT</license>

  <!-- URL for additional information about this package -->
  <url type="website">http://wiki.ros.org/convert_rgb_to_mono_image</url>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <!-- Additional information for tools -->
  </export>
</package>
